--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: localhost
   username: pbminh
-  password: gamegame
+  password: <%= ENV.fetch("RAILS_YTF_API_DB_PSWD") %>
 
 development:
   <<: *default
